# FaceIdentificationAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/faceidentification/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceProcessEngine.cpp  FaceProcessEngine.h  native-lib.cpp
app/src/main/cpp/include/dlib/logger/: logger_kernel_1.cpp
app/src/main/java/com/example/faceidentification/: FaceRecordActivity.java  MainActivity.java
app/src/main/java/com/example/faceidentification/face/: Face.java  FaceShapes.java
app/src/main/java/com/example/faceidentification/net/: NetHandler.java  OkHttpUtils.java  ResponseCallBack.java
app/src/main/java/com/example/faceidentification/utils/: ToastUtil.java
app/src/main/res/layout/: activity_face_record.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/src/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  JavaCameraView.java
